--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-treasury_gov_pandas
-fastapi>=0.68.0
-pandas>=1.3.0
-plotly>=5.3.0
-requests>=2.26.0 
-uvicorn>=0.25.0
-fed_net_liquidity
+fastapi==0.68.1
+uvicorn==0.15.0
+pandas==1.3.3
+plotly==5.3.1
+treasury_gov_pandas==0.0.7
+fed_net_liquidity==0.0.3
+python-dotenv==0.19.0
